...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/paper_iv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/bg_paper"
            android:src="@drawable/icon_paper"
            android:stateListAnimator="@animator/zoom_out"
            app:contentPadding="25dp"
...
